# genetic-pipe

./: readme
src/: gazebo-ros-foxy.def  pipebot-genetic.def
src/gazebo_ros_simple_motor/: CMakeLists.txt  package.xml
src/gazebo_ros_simple_motor/include/gazebo_ros_simple_motor/: gazebo_ros_simple_motor.hpp
src/gazebo_ros_simple_motor/src/: gazebo_ros_simple_motor.cpp
src/gazebo_ros_simple_motor/test/: test_gazebo_ros_simple_motor.cpp
src/gazebo_ros_simple_motor_msgs/: CMakeLists.txt  package.xml
src/gazebo_ros_simple_motor_msgs/msg/: MotorControl.msg
src/pipebot_control/: CMakeLists.txt  package.xml
src/pipebot_control/config/: pipebot.yaml
src/pipebot_control/headers/: ctrnn.h  net_control.h
src/pipebot_control/launch/: pipebot_control.launch.py
src/pipebot_control/src/: ctrnn.cpp  net_control.cpp
src/pipebot_description/: CMakeLists.txt  package.xml
src/pipebot_description/meshes/: sprintbot_body_corrected_axis.dae
src/pipebot_description/urdf/: pipebot.urdf  sprintbot.urdf
src/pipebot_gazebo/: CMakeLists.txt  package.xml
src/pipebot_gazebo/launch/: pipebot.launch.py
src/pipebot_gazebo/worlds/: maze.world  pipe_obstacle.world  pipebot.world
src/pipebot_genetic/: package.xml  setup.cfg  setup.py
src/pipebot_genetic/launch/: pipebot_GA.launch.py
src/pipebot_genetic/pipebot_genetic/: GA_client.py  obstacle_generator.py
src/pipebot_services/: CMakeLists.txt  package.xml
src/pipebot_services/srv/: Genes.srv
