<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipebot_control</name>
  <version>0.0.0</version>
  <description>Robot controller, including a DNN/CTRNN with laser input and velocity output</description>
  <maintainer email="n.p.cambier@leeds.ac.uk">Nicolas Cambier</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pipebot_services</depend>
  <depend>effort_controllers</depend>
  <depend>gazebo_ros_simple_motor</depend>  
  <depend>gazebo_ros_simple_motor_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <type>ament_cmake</type>
  </export>
</package>
