<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipebot_control</name>
  <version>0.0.0</version>
  <description>Robot controller, including a DNN/CTRNN with laser input and velocity output</description>
  <maintainer email="n.p.cambier@leeds.ac.uk">Nicolas Cambier</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pipebot_services</build_depend>  
  <build_depend>effort_controllers</build_depend>
  <build_depend>gazebo_ros_simple_motor</build_depend>  
  <build_depend>gazebo_ros_simple_motor_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pipebot_services</exec_depend>  
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros_simple_motor</exec_depend>  
  <exec_depend>gazebo_ros_simple_motor_msgs</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
