<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipebot_gazebo</name>
  <version>0.0.0</version>
  <description>World model and launch file for simple simulation (including controller and robot spawner)</description>
  <maintainer email="n.p.cambier@leeds.ac.uk">Nicolas Cambier</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
